--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ author_profile: false
 </span>
 
 <h2>What we do</h2>
-<h3>UiPath Marketplace Componentss</h3>
+<h3>UiPath Marketplace Listings</h3>
 
 <div class="card-list">
   <div class="card">
